Добавил true конфиг

--- a/4_relays_modules/bedroom.yaml
+++ b/4_relays_modules/bedroom.yaml
@@ -1,19 +1,16 @@
-#При первой прошивка через uart прошивать без платы.
-
 substitutions:
-  plug_name: bedroom
+  plug_name: bedroom_74hc95
 esphome:
   name: ${plug_name}
   platform: ESP8266
   board: nodemcuv2
   esp8266_restore_from_flash: true
-  on_boot:
-   then:
-     - switch.turn_off: relay1
-     - switch.turn_on: socket1
-     - switch.turn_on: socket2
-     - switch.turn_on: socket3
-     
+  # on_boot:
+  #   then:
+  #     - switch.turn_off: relay1
+  #     - switch.turn_on: relay2
+  #     - switch.turn_on: relay3
+  #     - switch.turn_on: relay4
 
 wifi:
   ssid: !secret wifi_ssid
@@ -23,28 +20,35 @@ wifi:
   ap:
     ssid: ${plug_name}_Fallback_Hotspot
     password: !secret ap_pass
-
+captive_portal:
   # Optional manual IP
   # manual_ip:
   #   static_ip: 192.168.1.10
   #   gateway: 192.168.1.1
   #   subnet: 255.255.255.0
-captive_portal:
 logger:
+  level: NONE
 
 # Enable Home Assistant API
 api:
   password: !secret ha_api_pass
-
-ota: 
+ota:
   password: !secret ha_api_pass
 
 web_server:
 
+sn74hc595:
+  - id: "sn74hc595_hub"
+    data_pin: GPIO4 #4
+    latch_pin: GPIO2 #2
+    clock_pin: GPIO3 #3
+    oe_pin: GPIO1
+    sr_count: 1
+
 binary_sensor:
   - platform: gpio
     name: ${plug_name}_sw1
-    pin: 
+    pin:
       number: GPIO14
       mode: INPUT_PULLUP
       inverted: true
@@ -63,13 +67,13 @@ binary_sensor:
             id: relay1
   - platform: gpio
     name: ${plug_name}_sw2
-    pin: 
+    pin:
       number: GPIO12
       mode: INPUT_PULLUP
       inverted: true
     id: switch_light2
     filters:
-      - delayed_on: 50ms
+      - delayed_on: 5ms
       - delayed_off: 50ms
       - delayed_on_off: 100ms
     on_press:
@@ -82,7 +86,7 @@ binary_sensor:
             id: relay2
   - platform: gpio
     name: ${plug_name}_sw3
-    pin: 
+    pin:
       number: GPIO13
       mode: INPUT_PULLUP
       inverted: true
@@ -100,12 +104,12 @@ binary_sensor:
         - switch.toggle:
             id: relay3
   - platform: gpio
-    name: ${plug_name}_sw4 
-    pin: 
+    name: ${plug_name}_sw4 #pull_up to 3.3 resistor 10kom
+    pin:
       number: GPIO5
       mode: INPUT_PULLUP
       inverted: true
-    id: switch_light4 
+    id: switch_light4
     filters:
       - delayed_on: 50ms
       - delayed_off: 50ms
@@ -118,50 +122,82 @@ binary_sensor:
       then:
         - switch.toggle:
             id: relay4
-            
-#-----------------------------------  
-switch:
-  - platform: gpio
-    name: ${plug_name}_switch_relay_light
-    icon: mdi:ceiling-light
-    pin: GPIO2 #d
-    inverted: true
-    # restore_mode: ALWAYS_OFF
-    id: relay1
-  - platform: gpio
-    name: ${plug_name}_socket1
-    icon: mdi:power-socket-de
-    pin: GPIO1 #tx
-    # inverted: true
-    id: socket1
-    restore_mode: ALWAYS_OFF
-  - platform: gpio
-    name: ${plug_name}_socket2
-    icon: mdi:power-socket-de
-    pin:  GPIO4 #d1
-    # inverted: true
-    id: socket2
-  - platform: gpio
-    name: ${plug_name}_socket3
-    icon: mdi:power-socket-de
-    pin:   GPIO3 #rx
-    # inverted: true
-    id: socket3
 
+#-----------------------------------
+switch:
+  - platform: restart
+    name: "Restart"
+  - platform: gpio
+    name: "SN74HC595 relay 1"
+    id: relay1
+    restore_mode: ALWAYS_OFF
+    pin:
+      sn74hc595: sn74hc595_hub
+      number: 1
+      # inverted: true
+  - platform: gpio
+    name: "SN74HC595 relay 2"
+    id: relay2
+    pin:
+      sn74hc595: sn74hc595_hub
+      number: 2
+      # inverted: true
+  - platform: gpio
+    name: "SN74HC595 relay 3"
+    id: relay3
+    pin:
+      sn74hc595: sn74hc595_hub
+      number: 3
+      # inverted: true
+  - platform: gpio
+    name: "SN74HC595 relay 4"
+    id: relay4
+    pin:
+      sn74hc595: sn74hc595_hub
+      number: 4
+      # inverted: true
+  - platform: gpio
+    name: "SN74HC595 out 5"
+    id: relay5
+    pin:
+      sn74hc595: sn74hc595_hub
+      number: 5
+      inverted: true
+  - platform: gpio
+    name: "SN74HC595 out 6"
+    id: relay6
+    pin:
+      sn74hc595: sn74hc595_hub
+      number: 6
+      inverted: true
+  - platform: gpio
+    name: "SN74HC595 out 7"
+    id: relay7
+    pin:
+      sn74hc595: sn74hc595_hub
+      number: 7
+      inverted: true
+  - platform: gpio
+    name: "SN74HC595 out 8"
+    id: relay8
+    pin:
+      sn74hc595: sn74hc595_hub
+      number: 8
+      inverted: true
 sensor:
-   - platform: uptime
-     name: ${plug_name}_uptime
-   - platform: wifi_signal
-     name: ${plug_name}_wifi_signal
-     update_interval: 60s
-   - platform: dht
-     model: DHT11
-     pin: GPIO16 #D0
-     humidity:
-      name: ${plug_name}_humidity
-     temperature:
-      name: ${plug_name}_temp
-     update_interval: 30s  
+    - platform: uptime
+      name: ${plug_name}_uptime
+    - platform: wifi_signal
+      name: ${plug_name}_wifi_signal
+      update_interval: 60s
+    - platform: dht
+      model: DHT11
+      pin: GPIO16 #D0
+      humidity:
+        name: ${plug_name}_humidity
+      temperature:
+        name: ${plug_name}_temp
+      update_interval: 15s
 
 text_sensor:
   - platform: version
